added github link to about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -6,7 +6,9 @@
 </head>
 
 <body>
-    {{>navbar}}
+    <div class="container-fluid ml-2">
+        {{>navbar}}
+    </div>
 
     <div class="container-fluid">
         <div class="row pl-5">
@@ -19,6 +21,13 @@
                     <a href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2">The Complete Node.js
                         Developer Course (3rd Edition) by Andrew Mead and Rob Percival</a>
                 </p>
+
+                <p>
+                    <a href="https://github.com/aksoyih/weather-app">GitHub repository of the application</a>
+                </p>
+
+                app.js
+                <script src="http://gist-it.appspot.com/https://github.com/aksoyih/weather-app/blob/main/src/app.js"></script>
             </div>
 
         </div>
