--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -26,7 +26,7 @@
                     <a href="https://github.com/aksoyih/weather-app">GitHub repository of the application</a>
                 </p>
 
-                <script src="http://gist-it.appspot.com/https://github.com/aksoyih/weather-app/blob/main/src/app.js"></script>
+                <script src="https://gist-it.appspot.com/https://github.com/aksoyih/weather-app/blob/main/src/app.js"></script>
             </div>
 
         </div>
