changed about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -15,7 +15,7 @@
             <div class="col-12 mt-4">
                 <h3>About the Weather App</h3>
                 <p>
-                    This Weather App is created by following an Udemy course
+                    This Weather App is created by i. Haluk Aksoy, by following an Udemy course as an excersize. It uses geolocation data from <a href="https://www.mapbox.com/">mapbox.com</a> and weather data from <a href="https://weatherstack.com/">weatherstack.com</a>
                 </p>
                 <p>
                     <a href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2">The Complete Node.js
